<?xml version="1.0"?>
<package>
  <name>flc_teleoperation</name>
  <version>0.1.0</version>
  <description>Package for teleoperation using Free Look Control (FLC).</description>

  <maintainer email="fbaberg@kth.se">Fredrik Baberg</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nifti_teleop</run_depend>
  <run_depend>nifti_robot_driver_msgs</run_depend>
  <run_depend>virtual_camera_msgs</run_depend>

</package>
